docker/k8s/build/automation-bot-legacy.yml
# This is the actual bot's deployment, specifying what it should run
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automation-bot-legacy
  namespace: build
  labels:
    app: automation-bot-legacy
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: automation-bot-legacy
  template:
    metadata:
      labels:
        app: automation-bot-legacy
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-12
      serviceAccountName: automation-bot-service-account
      volumes:
        - name: nfs-data
          hostPath:
            type: Directory
            path: /nfs/build/m12_legacy
        - name: nfs-old-backups
          hostPath:
            type: Directory
            path: /nfs/0_OLD_BACKUPS
        - name: nfs-archive
          hostPath:
            type: Directory
            path: /nfs/1_ARCHIVE
        - name: nfs-shared
          hostPath:
            type: Directory
            path: /nfs/4_SHARED
        - name: secret-config
          secret:
            secretName: automation-bot-config-legacy
      containers:
      - name: automation-bot-legacy
        image: docker.pkg.github.com/teammonumenta/monumenta-automation/monumenta-automation-bot
        tty: false
        stdin: false
        volumeMounts:
        - name: nfs-data
          mountPath: /home/epic/project_epic
        - name: nfs-old-backups
          mountPath: /home/epic/0_OLD_BACKUPS
        - name: nfs-archive
          mountPath: /home/epic/1_ARCHIVE
        - name: nfs-shared
          mountPath: /home/epic/4_SHARED
        - name: secret-config
          mountPath: /home/epic/.monumenta_bot
        resources:
          limits:
            cpu: "3"
      imagePullSecrets:
      - name: githubcred
