docker/k8s/build/automation-bot.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monumenta-automation-bot-deployment
  namespace: build-ns
  labels:
    app: monumenta-automation-bot
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: monumenta-automation-bot
  template:
    metadata:
      labels:
        app: monumenta-automation-bot
    spec:
      volumes:
        - name: nfs-data
          nfs:
            server: 10.6.3.1
            path: /nfs/build/project_epic
        - name: nfs-shared
          nfs:
            server: 10.6.3.1
            path: /4_SHARED
        - name: secret-config
          secret:
            secretName: automation-bot-build-config
      containers:
      - name: monumenta-automation-bot
        image: monumenta-docker.injic.io/monumenta-automation-bot
        tty: false
        stdin: false
        volumeMounts:
        - name: nfs-data
          mountPath: /home/rock/project_epic
        - name: nfs-shared
          mountPath: /home/rock/4_SHARED
        - name: secret-config
          mountPath: /home/rock/.monumenta_bot
      imagePullSecrets:
      - name: regcred
