docker/k8s/build/test.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monumenta-test-deployment
  namespace: build-ns
  labels:
    app: monumenta-test
spec:
  strategy:
    type: Recreate
  replicas: 0
  selector:
    matchLabels:
      app: monumenta-test
  template:
    metadata:
      labels:
        app: monumenta-test
    spec:
      volumes:
        - name: nfs-maps
          nfs:
            server: 10.6.3.1
            path: /nfs/build/maps
        - name: nfs-project-epic
          nfs:
            server: 10.6.3.1
            path: /nfs/build/project_epic
      containers:
      - name: monumenta-test
        image: monumenta-docker.injic.io/monumenta-java-shard
        tty: true
        stdin: true
        ports:
        - containerPort: 25565
        volumeMounts:
        - name: nfs-project-epic
          mountPath: /project_epic
        - name: nfs-maps
          mountPath: /home/rock/maps/dynmap/build
      imagePullSecrets:
      - name: regcred
