docker/k8s/build/basic-ssh.nodeport.service.yml
apiVersion: v1
kind: Service
metadata:
  name: monumenta-basic-ssh-nodeport
  namespace: build-ns
  labels:
    app: monumenta-basic-ssh
spec:
  type: NodePort
  selector:
    app: monumenta-basic-ssh
  ports:
  # SSH
  - name: "22"
    port: 22
    nodePort: 8822
    targetPort: 22
