docker/k8s/build/depths-ssh.yml
# The nodeport service exposing the SSH port

apiVersion: v1
kind: Service
metadata:
  name: depths-ssh-nodeport
  namespace: build
  labels:
    app: depths-ssh
spec:
  type: NodePort
  selector:
    app: depths-ssh
  ports:
  # SSH
  - name: "22"
    port: 22
    nodePort: 21234
    targetPort: 22

---

# The actual container that runs SSH that you can connect to

apiVersion: apps/v1
kind: Deployment
metadata:
  name: depths-ssh
  namespace: build
  labels:
    app: depths-ssh
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: depths-ssh
  template:
    metadata:
      labels:
        app: depths-ssh
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-8
      volumes:
        - name: nfs-datapack
          hostPath:
            type: Directory
            path: /nfs/build/project_epic/server_config/data/datapacks/depths
        - name: nfs-logs
          hostPath:
            type: Directory
            path: /nfs/build/project_epic/depths/logs
        - name: nfs-scriptedquests
          hostPath:
            type: Directory
            path: /nfs/build/project_epic/server_config/data/depths
        - name: authorized-keys-config
          secret:
            secretName: authorized-keys-config-depths
            defaultMode: 292
      containers:
      - name: depths-ssh
        image: docker.pkg.github.com/teammonumenta/monumenta-automation/monumenta-basic-ssh
        tty: false
        stdin: false
        ports:
        - containerPort: 22
        volumeMounts:
        - name: nfs-datapack
          mountPath: /home/epic/datapack
        - name: nfs-logs
          mountPath: /home/epic/logs
        - name: nfs-scriptedquests
          mountPath: /home/epic/scriptedquests
        - name: authorized-keys-config
          mountPath: /home/epic/.ssh/authorized_keys
          subPath: authorized_keys
      imagePullSecrets:
      - name: githubcred
