docker/k8s/build/dev2-ssh.yml
# The nodeport service exposing the SSH port

apiVersion: v1
kind: Service
metadata:
  name: dev2-ssh-nodeport
  namespace: build
  labels:
    app: dev2-ssh
spec:
  type: NodePort
  selector:
    app: dev2-ssh
  ports:
  # SSH
  - name: "22"
    port: 22
    nodePort: 9999
    targetPort: 22

---

# The actual container that runs SSH that you can connect to

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev2-ssh
  namespace: build
  labels:
    app: dev2-ssh
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: dev2-ssh
  template:
    metadata:
      labels:
        app: dev2-ssh
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-8
      volumes:
        - name: nfs-dev2-logs
          hostPath:
            type: Directory
            path: /nfs/build/project_epic/dev2/logs
        - name: nfs-dev2-plugins
          hostPath:
            type: Directory
            path: /nfs/build/project_epic/dev2/plugins
      containers:
      - name: dev2-ssh
        image: monumenta-docker.injic.io/monumenta-dev2-ssh
        tty: false
        stdin: false
        ports:
        - containerPort: 22
        volumeMounts:
        - name: nfs-dev2-logs
          mountPath: /home/epic/dev2_shard_logs
        - name: nfs-dev2-plugins
          mountPath: /home/epic/dev2_shard_plugins
      imagePullSecrets:
      - name: regcred
