docker/k8s/build/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: build
spec:
  ports:
  - port: 5672
  selector:
    app: rabbitmq

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-mgmt
  namespace: build
spec:
  ports:
  - port: 15672
  selector:
    app: rabbitmq-mgmt

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: build
spec:
  selector:
    matchLabels:
      app: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      priorityClassName: monumenta-build-data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-18
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "monumenta-rabbit"
      containers:
      - image: rabbitmq:3.12-management
        name: rabbitmq
        ports:
        - containerPort: 5672
          name: rabbitmq
        - containerPort: 15672
          name: rabbitmq-mgmt
        volumeMounts:
        - name: rabbitmq-config
          mountPath: /etc/rabbitmq/conf.d/20-monumenta-custom.conf
          subPath: 20-monumenta-custom.conf
        resources:
          # 10 days (2026-09-07 to 2026-09-17 UTC): 132 MiB median, 152 MiB peak RSS.
          # Request was 64Mi.
          requests:
            cpu: 100m
            memory: 384Mi
          limits:
            cpu: 2
            memory: 1Gi
      volumes:
        - name: rabbitmq-config
          configMap:
            name: rabbitmq-config
