docker/k8s/build/region2.clusterip.service.yml
apiVersion: v1
kind: Service
metadata:
  name: monumenta-region2-clusterip
  namespace: build-ns
  labels:
    app: monumenta-region2
spec:
  type: ClusterIP
  selector:
    app: monumenta-region2
  ports:
  # Main minecraft port
  - name: "25565"
    port: 25565
    targetPort: 25565
  # Plan
  - name: "8804"
    port: 8804
    targetPort: 8804
