docker/k8s/build/socket_tester.yml
# Service / network ports

apiVersion: v1
kind: Service
metadata:
  name: sockettest
  namespace: build
  labels:
    app: sockettest
spec:
  type: ClusterIP
  selector:
    app: sockettest
  ports:
  - name: "sockettest"
    port: 9576
    targetPort: 9576

---

# Deployment / the actual running application

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sockettest
  namespace: build
  labels:
    app: sockettest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sockettest
  template:
    metadata:
      labels:
        app: sockettest
    spec:
      priorityClassName: monumenta-build
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-18
      containers:
      - name: sockettest
        image: subfuzion/netcat
        resources:
          # A netcat debugging pod. Tiny by construction.
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 64Mi
        tty: true
        stdin: true
        ports:
        - containerPort: 9576
        args: ["-l", "9576"]
